search함수 및 DBCleaner, verification 수정
